--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 </head>
 <body>
 </body>
-<script src="service-worker.js" type="text/javascript"/>
+  <script src="service-worker.js" type="text/javascript"></script>
 </html>
